--- a/Contact.html
+++ b/Contact.html
@@ -798,42 +798,41 @@
       <div class="container">
         <h2 class="section-title">What Can I Help You With?</h2>
         <div class="services-grid">
-          <div class="service-card">
+        <div class="service-card">
             <div class="service-icon">🔒</div>
-            <h3>Security Assessments</h3>
-            <p>Comprehensive <b>VAPT</b>, <b>WAPT</b>, and vulnerability assessments for your applications and
-              infrastructure.</p>
-          </div>
-          <div class="service-card">
+            <h3>Cyber Security Services</h3>
+            <p>Comprehensive protection for systems, applications, APIs, and networks using industry standards and expert manual testing.</p>
+        </div>
+        <div class="service-card">
             <div class="service-icon">📋</div>
             <h3>Security Consultation</h3>
-            <p>Expert advice on improving security posture, compliance requirements, and risk management.</p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">🛠️</div>
-            <h3>Custom Tool Development</h3>
-            <p>Development of custom security testing tools tailored to your specific requirements.</p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">👨‍🏫</div>
-            <h3>Training & Workshops</h3>
-            <p>Security awareness training and hands-on workshops for your development and security teams.</p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">🔍</div>
-            <h3>Vulnerability Research</h3>
-            <p>Dedicated security research and vulnerability analysis for your products and services.</p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">🚨</div>
-            <h3>Incident Response</h3>
-            <p>Assistance with security incident investigation, forensics, and remediation planning.</p>
-          </div>
+            <p>Get expert advice to strengthen your security posture, meet compliance, and plan effective cyber defense strategies.</p>
+        </div>
+        <div class="service-card">
+            <div class="service-icon">🛡️</div>
+            <h3>Vulnerability Assessment & Remediation</h3>
+            <p>Find and fix vulnerabilities through scans, manual testing, and clear remediation guidance.</p>
+        </div>
+        <div class="service-card">
+            <div class="service-icon">💻</div>
+            <h3>VAPT & WAPT</h3>
+            <p>Simulate real-world attacks on systems and web apps to uncover and patch critical security weaknesses effectively.</p>
+        </div>
+        <div class="service-card">
+            <div class="service-icon">🔌</div>
+            <h3>API Security Testing</h3>
+            <p>Test REST and GraphQL APIs for broken authentication, data leaks, and authorization flaws using secure methods.</p>
+        </div>
+        <div class="service-card">
+            <div class="service-icon">🌐</div>
+            <h3>Network Penetration Testing</h3>
+            <p>Assess internal and external networks for exposed ports, misconfigurations, and exploitable security loopholes and risks.</p>
+        </div>
         </div>
       </div>
     </section>
 
-    <section class="section section-dark">
+    <!-- <section class="section section-dark">
       <div class="container">
         <h2 class="section-title">Working Hours</h2>
         <div class="about-content">
@@ -854,7 +853,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="section">
       <div class="container">
@@ -927,6 +926,7 @@
 </body>
 
 </html>
+
 
 
 
