--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   <section id="blog" class="section">
                                                   <div class="hero-cta">
           <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
-          <a href="Services.html" class="btn btn-secondary">check out all Blogs.</a>
+          <a href="Blog.html" class="btn btn-secondary">check out all Blogs.</a>
         </div>
         </section>
 
