--- a/Blog.html
+++ b/Blog.html
@@ -58,7 +58,7 @@
         <section class="hero hero-small">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Blog</h1>
+                    <h1 class="hero-title">Welcome my Blogs </h1>
                     <p class="hero-subtitle">Cybersecurity Insights & Tutorials</p>
                 </div>
             </div>
@@ -218,4 +218,5 @@
 
 
 </html>
+
 
