--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
+    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter | Cyber Security Services.</title>
     <meta name="description"
         content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
     <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
     <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
+<meta name="description" content="Comprehensive cyber security services by Mrutunjaya Senapati — VAPT, API testing, network security, and consulting.">
+<meta name="keywords" content="cyber security, VAPT, penetration testing, bug bounty, cyber consulting, ethical hacking, Mrutunjaya Senapati, cybersecurity company India">
+<meta property="og:title" content="Cyber Security Services | Mrutunjaya Senapati">
+<meta property="og:description" content="VAPT, penetration testing, and expert cyber defense services. Secure your business with Mrutunjaya.">
+<meta property="og:url" content="https://mrutunjaya.senapati.xyz/index.html">
+<meta property="og:type" content="website">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="ad04f59b-323c-4a0c-929e-25ffc100b6f0" type="text/javascript" async></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
