--- a/cyber-security-services.html
+++ b/cyber-security-services.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
-    <meta name="description"
-        content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
-    <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
-    <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
+<title>Cyber Security Solutions | Complete Protection Services</title>
+<meta name="description" content="Explore powerful cyber security services from Mrutunjaya Senapati — from VAPT to remediation and consultation.">
+<meta name="keywords" content="cyber security solutions, data protection, endpoint security, risk assessment, Mrutunjaya Senapati, cybersecurity services India">
+<meta property="og:title" content="Cyber Security Solutions | Complete Protection Services">
+<meta property="og:description" content="Protect your business with tailored cyber security services by Mrutunjaya Senapati.">
+<meta property="og:url" content="https://mrutunjaya.senapati.xyz/cyber-security-services.html">
+<meta property="og:type" content="website">
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
