--- a/vapt-wapt.html
+++ b/vapt-wapt.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
-    <meta name="description"
-        content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
-    <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
-    <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
+<title>VAPT & WAPT Testing Services | Ethical Hacking & Security Audit</title>
+<meta name="description" content="Simulate real cyber attacks with VAPT and WAPT. Identify and patch critical security flaws before hackers do.">
+<meta name="keywords" content="VAPT services, WAPT, penetration testing, web application testing, ethical hacking, Mrutunjaya Senapati, cyber attack simulation">
+<meta property="og:title" content="VAPT & WAPT Testing Services">
+<meta property="og:description" content="Manual and automated penetration testing for your web apps and systems.">
+<meta property="og:url" content="https://mrutunjaya.senapati.xyz/vapt-wapt.html">
+<meta property="og:type" content="website">
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
