--- a/api-security-testing.html
+++ b/api-security-testing.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
-    <meta name="description"
-        content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
-    <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
-    <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
+<title>API Security Testing | REST & GraphQL Protection</title>
+<meta name="description" content="Protect your REST and GraphQL APIs from unauthorized access, data exposure, and broken authentication.">
+<meta name="keywords" content="API security testing, REST API protection, GraphQL security, secure API development, OWASP API top 10, Mrutunjaya Senapati">
+<meta property="og:title" content="API Security Testing Services">
+<meta property="og:description" content="API security audits to protect your business from data leaks and insecure endpoints.">
+<meta property="og:url" content="https://mrutunjaya.senapati.xyz/api-security-testing.html">
+<meta property="og:type" content="website">
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
