--- a/network-penetration-testing.html
+++ b/network-penetration-testing.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
-    <meta name="description"
-        content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
-    <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
-    <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
+ <title>Network Penetration Testing | Internal & External Network Audit</title>
+<meta name="description" content="Evaluate your network security posture with advanced internal and external penetration testing. Discover misconfigurations and security flaws.">
+<meta name="keywords" content="network penetration testing, internal network audit, external vulnerability scanning, NPT services, Mrutunjaya Senapati">
+<meta property="og:title" content="Network Penetration Testing Services">
+<meta property="og:description" content="Secure your infrastructure with expert-led network vulnerability assessment and penetration testing.">
+<meta property="og:url" content="https://mrutunjaya.senapati.xyz/network-penetration-testing.html">
+<meta property="og:type" content="website">
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
