--- a/security-consultation.html
+++ b/security-consultation.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
-    <meta name="description"
-        content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
-    <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
-    <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
+<title>Cyber Security Consultation | Strategic Security Planning</title>
+<meta name="description" content="Get expert guidance for improving your cyber security framework, compliance, and risk management strategy.">
+<meta name="keywords" content="security consultation, cyber advisory, risk management, compliance audit, cybersecurity planning, Mrutunjaya Senapati">
+<meta property="og:title" content="Cyber Security Consultation">
+<meta property="og:description" content="Cyber advisory and strategy services tailored to your business and threat model.">
+<meta property="og:url" content="https://mrutunjaya.senapati.xyz/security-consultation.html">
+<meta property="og:type" content="website">
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
