--- a/Contact.html
+++ b/Contact.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
-    <meta name="description"
-        content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
-    <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
-    <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
+<title>Contact Mrutunjaya Senapati | Cyber Security Expert</title>
+<meta name="description" content="Reach out to Mrutunjaya Senapati for cyber security services, queries, consultations, or project quotes.">
+<meta name="keywords" content="contact cyber expert, Mrutunjaya Senapati, cybersecurity services, VAPT contact, security consultant India">
+<meta property="og:title" content="Contact Mrutunjaya Senapati">
+<meta property="og:description" content="Let’s secure your business — reach out for security testing, assessments, or support.">
+<meta property="og:url" content="https://mrutunjaya.senapati.xyz/Contact.html">
+<meta property="og:type" content="website">
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -926,6 +928,7 @@
 </body>
 
 </html>
+
 
 
 
